// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Keywords AnyKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.AnyKeyword;
    return type;
}, []);
"
`;

exports[`Keywords BooleanKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.BooleanKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NeverKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.NeverKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NullKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.NullKeyword;
    return type;
}, []);
"
`;

exports[`Keywords NumberKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.NumberKeyword;
    return type;
}, []);
"
`;

exports[`Keywords ObjectKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.ObjectKeyword;
    return type;
}, []);
"
`;

exports[`Keywords StringKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.StringKeyword;
    return type;
}, []);
"
`;

exports[`Keywords UndefinedKeyword 1`] = `
"import MantaStyle from \\"@manta-style/runtime\\";
import * as MantaStyleHelper from \\"@manta-style/typescript-helpers\\";
const Test = MantaStyle.TypeAliasDeclaration(\\"Test\\", typeFactory => {
    const type = MantaStyle.UndefinedKeyword;
    return type;
}, []);
"
`;
